    - Add the numeric tuple field accessor and the ByIndex field to ColumnAccessExpr.
- Version: 27 (MinAcceptedVersion: 27)
    - Change how DArray datums are hashed for distinct and aggregation operations.
- Version: 28 (MinAcceptedVersion: 28)
    - The CORR aggregate function has been added which will not be recognized
      by older nodes. However, new nodes can process plans from older nodes,
      so MinAcceptedVersion is unchanged.
- Version: 29 (MinAcceptedVersion: 29)
    - The hashing of DArray datums was changed and is incompatible with the
      existing method of hashing DArrays.
- Version: 30 (MinAcceptedVersion: 30)
    - The Sampler and SampleAggregator specs for optimizer statistics have
      added fields for inverted sketches. Two new row types are produced by
      Samplers, which are not backward compatible with the previous version.
- Version: 31 (MinAcceptedVersion: 30)
    - The TableReader field MaxResults was retired in favor of the new field
      Parallelize. The change is backwards compatible (mixed versions will
      prevent parallelization).
- Version: 32 (MinAcceptedVersion: 30)
    - Added an aggregator for ST_Extent. The change is backwards compatible
      (mixed versions will prevent parallelization).
- Version: 33 (MinAcceptedVersion: 30)
    - Added an aggregator for ST_Union. The change is backwards compatible
      (mixed versions will prevent parallelization).
- Version: 34 (MinAcceptedVersion: 30)
    - Added a boolean field to InvertedJoinerSpec to maintain ordering. The
      change is backwards compatible because the invertedJoiner already
      maintained ordering by default (mixed versions will prevent
      parallelization).
- Version: 35 (MinAcceptedVersion: 35)
    - Changed how system columns are represented in DistSQL Flows.
- Version: 36 (MinAcceptedVersion: 35)
    - Added an aggregator for ST_Collect. The change is backwards compatible
      (mixed versions will prevent parallelization).