@@ -42,13 +42,16 @@ type VectorizedStats struct {
 	// bytes_read is the number of bytes read from the disk. It is set only when
 	// io is true.
 	BytesRead int64 `protobuf:"varint,8,opt,name=bytes_read,json=bytesRead,proto3" json:"bytes_read,omitempty"`
+	// rows_read is the number of rows read from the disk. It is set only when
+	// io is true.
+	RowsRead int64 `protobuf:"varint,9,opt,name=rows_read,json=rowsRead,proto3" json:"rows_read,omitempty"`
 }
 
 func (m *VectorizedStats) Reset()         { *m = VectorizedStats{} }
 func (m *VectorizedStats) String() string { return proto.CompactTextString(m) }
 func (*VectorizedStats) ProtoMessage()    {}
 func (*VectorizedStats) Descriptor() ([]byte, []int) {
-	return fileDescriptor_stats_56bd985c7aab3da5, []int{0}
+	return fileDescriptor_stats_1542874cd30fedd3, []int{0}
 }
 func (m *VectorizedStats) XXX_Unmarshal(b []byte) error {
 	return m.Unmarshal(b)
@@ -139,6 +142,11 @@ func (m *VectorizedStats) MarshalTo(dAtA []byte) (int, error) {
 		i++
 		i = encodeVarintStats(dAtA, i, uint64(m.BytesRead))
 	}
+	if m.RowsRead != 0 {
+		dAtA[i] = 0x48
+		i++
+		i = encodeVarintStats(dAtA, i, uint64(m.RowsRead))
+	}
 	return i, nil
 }
 
@@ -179,6 +187,9 @@ func (m *VectorizedStats) Size() (n int) {
 	}
 	if m.BytesRead != 0 {
 		n += 1 + sovStats(uint64(m.BytesRead))
+	}
+	if m.RowsRead != 0 {
+		n += 1 + sovStats(uint64(m.RowsRead))
 	}
 	return n
 }
@@ -389,6 +400,25 @@ func (m *VectorizedStats) Unmarshal(dAtA []byte) error {
 					break
 				}
 			}
+		case 9:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field RowsRead", wireType)
+			}
+			m.RowsRead = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowStats
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.RowsRead |= (int64(b) & 0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
 		default:
 			iNdEx = preIndex
 			skippy, err := skipStats(dAtA[iNdEx:])
@@ -516,32 +546,33 @@ var (
 )
 
 func init() {
-	proto.RegisterFile("sql/colexec/execpb/stats.proto", fileDescriptor_stats_56bd985c7aab3da5)
+	proto.RegisterFile("sql/colexec/execpb/stats.proto", fileDescriptor_stats_1542874cd30fedd3)
 }
 
-var fileDescriptor_stats_56bd985c7aab3da5 = []byte{
-	// 367 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x91, 0xb1, 0xae, 0xd3, 0x30,
-	0x14, 0x86, 0xe3, 0xdc, 0x7b, 0x43, 0x71, 0x87, 0x82, 0x55, 0x21, 0x53, 0x09, 0x27, 0x62, 0x8a,
-	0x10, 0x4a, 0x24, 0x18, 0x98, 0x89, 0xba, 0x30, 0x20, 0xa4, 0x80, 0x18, 0x58, 0x22, 0xc7, 0x36,
-	0xa9, 0xd5, 0x38, 0x6e, 0x63, 0x47, 0x2a, 0x3c, 0x05, 0x23, 0xef, 0xc1, 0x4b, 0x74, 0xec, 0xd8,
-	0xa9, 0x40, 0xfa, 0x22, 0x28, 0x4e, 0x2b, 0x71, 0x17, 0xcb, 0xe7, 0x3f, 0x9f, 0x75, 0xbe, 0x23,
-	0x43, 0x62, 0xb6, 0x75, 0xca, 0x74, 0x2d, 0x76, 0x82, 0xa5, 0xc3, 0xb1, 0x29, 0x53, 0x63, 0xa9,
-	0x35, 0xc9, 0xa6, 0xd5, 0x56, 0xa3, 0x39, 0xd3, 0x6c, 0xdd, 0x6a, 0xca, 0x56, 0x89, 0xd9, 0xd6,
-	0xc9, 0x48, 0x2c, 0xe6, 0x95, 0xae, 0xb4, 0x03, 0xd2, 0xe1, 0x36, 0xb2, 0x0b, 0x52, 0x69, 0x5d,
-	0xd5, 0x22, 0x75, 0x55, 0xd9, 0x7d, 0x4d, 0x79, 0xd7, 0x52, 0x2b, 0x75, 0x33, 0xf6, 0x9f, 0xff,
-	0xf2, 0xe1, 0xec, 0xb3, 0x60, 0x56, 0xb7, 0xf2, 0xbb, 0xe0, 0x1f, 0x87, 0x29, 0xe8, 0x09, 0xf4,
-	0x25, 0xc7, 0x20, 0x02, 0xf1, 0x5d, 0x16, 0xf4, 0xa7, 0xd0, 0x7f, 0xb7, 0xcc, 0x7d, 0xc9, 0x51,
-	0x08, 0xa7, 0x4d, 0xa7, 0x8a, 0x92, 0x5a, 0xb6, 0x12, 0x06, 0xfb, 0x11, 0x88, 0x6f, 0x72, 0xd8,
-	0x74, 0x2a, 0x1b, 0x13, 0xf4, 0x0c, 0x0e, 0x55, 0x61, 0xbb, 0x4d, 0x2d, 0x0c, 0xbe, 0x71, 0xfd,
-	0x87, 0x4d, 0xa7, 0x3e, 0xb9, 0x00, 0xbd, 0x81, 0xb7, 0x56, 0x2a, 0x81, 0x6f, 0x23, 0x10, 0x4f,
-	0x5f, 0x3d, 0x4d, 0x46, 0xb5, 0xe4, 0xaa, 0x96, 0x2c, 0x2f, 0x6a, 0xd9, 0x64, 0x7f, 0x0a, 0xbd,
-	0x9f, 0xbf, 0x43, 0x90, 0xbb, 0x07, 0x4e, 0x48, 0xe3, 0xbb, 0x08, 0xc4, 0x93, 0x8b, 0xd0, 0x87,
-	0xdc, 0x97, 0x1a, 0xbd, 0x80, 0x8f, 0x15, 0xdd, 0x15, 0xb4, 0xae, 0x35, 0xa3, 0x56, 0xf0, 0x42,
-	0x09, 0x85, 0x03, 0x37, 0x76, 0xa6, 0xe8, 0xee, 0xed, 0x35, 0x7f, 0x2f, 0x14, 0x7a, 0x09, 0xd1,
-	0x7d, 0x96, 0x4b, 0xb3, 0xc6, 0x0f, 0x1c, 0xfc, 0xe8, 0x7f, 0x78, 0x29, 0xcd, 0x7a, 0xd8, 0xa4,
-	0xfc, 0x66, 0x85, 0x29, 0x5a, 0x41, 0x39, 0x9e, 0x8c, 0x9b, 0xb8, 0x24, 0x17, 0x94, 0x67, 0xf1,
-	0xfe, 0x2f, 0xf1, 0xf6, 0x3d, 0x01, 0x87, 0x9e, 0x80, 0x63, 0x4f, 0xc0, 0x9f, 0x9e, 0x80, 0x1f,
-	0x67, 0xe2, 0x1d, 0xce, 0xc4, 0x3b, 0x9e, 0x89, 0xf7, 0x25, 0x18, 0x7f, 0xa5, 0x0c, 0xdc, 0x76,
-	0xaf, 0xff, 0x05, 0x00, 0x00, 0xff, 0xff, 0xb0, 0xcb, 0x7a, 0x8a, 0xd4, 0x01, 0x00, 0x00,
+var fileDescriptor_stats_1542874cd30fedd3 = []byte{
+	// 379 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x91, 0x31, 0x8f, 0xd3, 0x30,
+	0x1c, 0xc5, 0xe3, 0xdc, 0x5d, 0x48, 0x7d, 0xc3, 0x81, 0x75, 0x42, 0xe6, 0x10, 0x4e, 0xc4, 0x14,
+	0x21, 0x94, 0x48, 0x30, 0x30, 0x13, 0x75, 0x61, 0x40, 0x48, 0x01, 0x31, 0xb0, 0x44, 0x8e, 0x6d,
+	0x52, 0xab, 0x71, 0xdc, 0xc6, 0x8e, 0x28, 0x7c, 0x0a, 0x46, 0x3e, 0x52, 0xc7, 0x8e, 0x9d, 0x0a,
+	0xa4, 0x5f, 0x04, 0xc5, 0x69, 0x25, 0x6e, 0xb1, 0xfc, 0x7f, 0xef, 0x67, 0xfd, 0xdf, 0x93, 0x21,
+	0x31, 0xeb, 0x26, 0x63, 0xba, 0x11, 0x1b, 0xc1, 0xb2, 0xf1, 0x58, 0x55, 0x99, 0xb1, 0xd4, 0x9a,
+	0x74, 0xd5, 0x69, 0xab, 0xd1, 0x2d, 0xd3, 0x6c, 0xd9, 0x69, 0xca, 0x16, 0xa9, 0x59, 0x37, 0xe9,
+	0x44, 0xdc, 0xdd, 0xd6, 0xba, 0xd6, 0x0e, 0xc8, 0xc6, 0xdb, 0xc4, 0xde, 0x91, 0x5a, 0xeb, 0xba,
+	0x11, 0x99, 0x9b, 0xaa, 0xfe, 0x6b, 0xc6, 0xfb, 0x8e, 0x5a, 0xa9, 0xdb, 0xc9, 0x7f, 0xbe, 0xf3,
+	0xe1, 0xcd, 0x67, 0xc1, 0xac, 0xee, 0xe4, 0x0f, 0xc1, 0x3f, 0x8e, 0x5b, 0xd0, 0x63, 0xe8, 0x4b,
+	0x8e, 0x41, 0x0c, 0x92, 0xab, 0x3c, 0x18, 0x0e, 0x91, 0xff, 0x6e, 0x5e, 0xf8, 0x92, 0xa3, 0x08,
+	0x5e, 0xb7, 0xbd, 0x2a, 0x2b, 0x6a, 0xd9, 0x42, 0x18, 0xec, 0xc7, 0x20, 0xb9, 0x28, 0x60, 0xdb,
+	0xab, 0x7c, 0x52, 0xd0, 0x33, 0x38, 0x4e, 0xa5, 0xed, 0x57, 0x8d, 0x30, 0xf8, 0xc2, 0xf9, 0xb3,
+	0xb6, 0x57, 0x9f, 0x9c, 0x80, 0xde, 0xc0, 0x4b, 0x2b, 0x95, 0xc0, 0x97, 0x31, 0x48, 0xae, 0x5f,
+	0x3d, 0x49, 0xa7, 0x68, 0xe9, 0x39, 0x5a, 0x3a, 0x3f, 0x45, 0xcb, 0xc3, 0xed, 0x21, 0xf2, 0x7e,
+	0xfd, 0x8e, 0x40, 0xe1, 0x1e, 0xb8, 0x40, 0x1a, 0x5f, 0xc5, 0x20, 0x09, 0x4f, 0x81, 0x3e, 0x14,
+	0xbe, 0xd4, 0xe8, 0x05, 0x7c, 0xa4, 0xe8, 0xa6, 0xa4, 0x4d, 0xa3, 0x19, 0xb5, 0x82, 0x97, 0x4a,
+	0x28, 0x1c, 0xb8, 0xb5, 0x37, 0x8a, 0x6e, 0xde, 0x9e, 0xf5, 0xf7, 0x42, 0xa1, 0x97, 0x10, 0xdd,
+	0x67, 0xb9, 0x34, 0x4b, 0xfc, 0xc0, 0xc1, 0x0f, 0xff, 0x87, 0xe7, 0xd2, 0x2c, 0xc7, 0x26, 0xd5,
+	0x77, 0x2b, 0x4c, 0xd9, 0x09, 0xca, 0x71, 0x38, 0x35, 0x71, 0x4a, 0x21, 0x28, 0x47, 0x4f, 0xe1,
+	0xac, 0xd3, 0xdf, 0x4e, 0xee, 0xcc, 0xb9, 0xe1, 0x28, 0x8c, 0x66, 0x9e, 0x6c, 0xff, 0x12, 0x6f,
+	0x3b, 0x10, 0xb0, 0x1b, 0x08, 0xd8, 0x0f, 0x04, 0xfc, 0x19, 0x08, 0xf8, 0x79, 0x24, 0xde, 0xee,
+	0x48, 0xbc, 0xfd, 0x91, 0x78, 0x5f, 0x82, 0xe9, 0xcb, 0xaa, 0xc0, 0x55, 0x7f, 0xfd, 0x2f, 0x00,
+	0x00, 0xff, 0xff, 0x3d, 0x2c, 0x83, 0x13, 0xf1, 0x01, 0x00, 0x00,
 }
